--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -23,7 +23,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 .platform-ios{
 	.bar-header{
-		background: chartreuse;
+		background: #961214
 		.title{
 			color: indigo;
 			font-weight: bold;
@@ -34,7 +34,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 }
 .platform-android{
 	.bar-header{
-		background: chartreuse;
+		background: #1375D0;
 		.title{
 			color:chocolate ;
 			font-weight: bold;
