--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -26,7 +26,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 		background: #961214
 		.title{
 			color: indigo;
-			font-weight: bold;
+			font-weight: bold; // agregamos  las css tanto para ios como para  android
+			
 			
 		}
 		
